fix z-index

--- a/src/_assets/stylesheets/styles.css
+++ b/src/_assets/stylesheets/styles.css
@@ -471,7 +471,7 @@ header > #headerScrim {
 	*    dialog.
 	*/
  .dialog-container {
-	 z-index: 2; /* 1 */
+	 z-index: 20; /* 1 */
 	 display: flex; /* 2 */
  }
 
@@ -515,7 +515,7 @@ header > #headerScrim {
 	*/
  .dialog-content {
 	 margin: auto; /* 1 */
-	 z-index: 2; /* 2 */
+	 z-index: 20; /* 2 */
 	 position: relative; /* 2 */
 	 background-color: var(--background); /* 3 */
  }
